--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                             </div>
                             <div class="flex gap-4 items-start justify-center mt-4 text-sm">
                                 <div class="flex flex-col"><span class="font-bold">Ngeyogja</span><span
-                                        class="font-['Playfair_Display'] italic font-bold text-blue-500">website</span>
+                                        class="font-['Playfair_Display'] italic font-bold text-blue-500 category hidden">website</span>
                                 </div> —
                                 2024
                             </div>
@@ -181,7 +181,7 @@
                             </div>
                             <div class="flex gap-4 items-start justify-center mt-4 text-sm">
                                 <div class="flex flex-col"><span class="font-bold">Selma</span><span
-                                        class="font-['Playfair_Display'] italic font-bold text-blue-500">graduation</span>
+                                        class="font-['Playfair_Display'] italic font-bold text-blue-500 category hidden">foto</span>
                                 </div> —
                                 2024
                             </div>
@@ -206,7 +206,7 @@
                             </div>
                             <div class="flex gap-4 items-start justify-center mt-4 text-sm">
                                 <div class="flex flex-col"><span class="font-bold">Ratri Wedding</span><span
-                                        class="font-['Playfair_Display'] italic font-bold text-blue-500">video</span>
+                                        class="font-['Playfair_Display'] italic font-bold text-blue-500 category hidden">video</span>
                                 </div> — 2024
                             </div>
 
@@ -230,7 +230,7 @@
                             </div>
                             <div class="flex gap-4 items-start justify-center mt-4 text-sm">
                                 <div class="flex flex-col"><span class="font-bold">Dema</span><span
-                                        class="font-['Playfair_Display'] italic font-bold text-blue-500">prewedding</span>
+                                        class="font-['Playfair_Display'] italic font-bold text-blue-500 category hidden">foto</span>
                                 </div> —
                                 2024
                             </div>
@@ -254,14 +254,61 @@
                             </div>
                             <div class="flex gap-4 items-start justify-center mt-4 text-sm">
                                 <div class="flex flex-col"><span class="font-bold">Madflash</span><span
-                                        class="font-['Playfair_Display'] italic font-bold text-blue-500">video</span>
+                                        class="font-['Playfair_Display'] italic font-bold text-blue-500 category hidden">video</span>
                                 </div> — 2025
                             </div>
 
                         </a>
                     </div>
 
+                    <div class="swiper-slide">
+                        <a class="group flex justify-center items-center flex-col focus:outline-none transition-all "
+                            href="https://www.instagram.com/p/C1laQM-vAdt/" target="_blank">
+                            <img class="min-h-[250px] max-h-[400px] rounded-xl object-bottom object-cover w-full group-hover:opacity-80 shadow-xl"
+                                src="https://cloud.tagbox.com/media/1726964/2138759/414748/18061742602491965/415929117_18404393953009332_5833013499614615173_n.jpg"
+                                alt="">
+                            <div
+                                class="icon absolute opacity-0 group-hover:opacity-100 transition-all duration-500 ease-in-out group-hover:rotate-[360deg] scale-0 group-hover:scale-125 left-0 right-0 mx-auto -mt-8 size-16 rounded-full bg-blue-600 flex items-center justify-center">
+                                <svg width="14" height="14" viewBox="0 0 14 14">
+                                    <path
+                                        d="M10.8101 1.96222L0.726954 12.0453L1.66171 12.9801L11.7448 2.89698L11.9344 9.4447L13.208 9.07311L13.0134 2.35278C12.9877 1.46249 12.2434 0.718185 11.3531 0.692412L4.80762 0.502924L4.43487 1.77539L10.8101 1.96222Z"
+                                        fill="white" stroke="white" stroke-width="0.542084"></path>
+                                </svg>
+                            </div>
+                            <div class="flex gap-4 items-start justify-center mt-4 text-sm">
+                                <div class="flex flex-col"><span class="font-bold">Laily</span><span
+                                        class="font-['Playfair_Display'] italic font-bold text-blue-500 category hidden">foto</span>
+                                </div> —
+                                2024
+                            </div>
 
+                        </a>
+                    </div>
+
+
+                    <div class="swiper-slide">
+                        <a class="group flex justify-center items-center flex-col focus:outline-none transition-all "
+                            href="https://www.instagram.com/p/C1LSp_QPzp1/" target="_blank">
+                            <img class="min-h-[250px] max-h-[400px] rounded-xl object-bottom object-cover w-full group-hover:opacity-80 shadow-xl"
+                                src="https://cloud.tagbox.com/media/1726964/2138759/414748/17984193974613737/412117966_392173763159748_7623907096476352852_n.jpg"
+                                alt="">
+                            <div
+                                class="icon absolute opacity-0 group-hover:opacity-100 transition-all duration-500 ease-in-out group-hover:rotate-[360deg] scale-0 group-hover:scale-125 left-0 right-0 mx-auto -mt-8 size-16 rounded-full bg-blue-600 flex items-center justify-center">
+                                <svg width="14" height="14" viewBox="0 0 14 14">
+                                    <path
+                                        d="M10.8101 1.96222L0.726954 12.0453L1.66171 12.9801L11.7448 2.89698L11.9344 9.4447L13.208 9.07311L13.0134 2.35278C12.9877 1.46249 12.2434 0.718185 11.3531 0.692412L4.80762 0.502924L4.43487 1.77539L10.8101 1.96222Z"
+                                        fill="white" stroke="white" stroke-width="0.542084"></path>
+                                </svg>
+                            </div>
+                            <div class="flex gap-4 items-start justify-center mt-4 text-sm">
+                                <div class="flex flex-col"><span class="font-bold">Laily</span><span
+                                        class="font-['Playfair_Display'] italic font-bold text-blue-500 category hidden">foto</span>
+                                </div> —
+                                2024
+                            </div>
+
+                        </a>
+                    </div>
                     <!-- Slide 2 -->
                     <div class="swiper-slide">
                         <a class="group flex justify-center items-center flex-col focus:outline-none transition-all "
@@ -280,7 +327,7 @@
                             </div>
                             <div class="flex gap-4 items-start justify-center mt-4 text-sm">
                                 <div class="flex flex-col"><span class="font-bold">Ero</span><span
-                                        class="font-['Playfair_Display'] italic font-bold text-blue-500">video</span>
+                                        class="font-['Playfair_Display'] italic font-bold text-blue-500 category hidden">video</span>
                                 </div> — 2022
                             </div>
 
@@ -303,7 +350,7 @@
                             </div>
                             <div class="flex gap-4 items-start justify-center mt-4 text-sm">
                                 <div class="flex flex-col"><span class="font-bold">AAU</span><span
-                                        class="font-['Playfair_Display'] italic font-bold text-blue-500">video</span>
+                                        class="font-['Playfair_Display'] italic font-bold text-blue-500 category hidden">video</span>
                                 </div> — 2024
                             </div>
 
@@ -325,7 +372,7 @@
                             </div>
                             <div class="flex gap-4 items-start justify-center mt-4 text-sm">
                                 <div class="flex flex-col"><span class="font-bold">KAI Night Run</span><span
-                                        class="font-['Playfair_Display'] italic font-bold text-blue-500">video</span>
+                                        class="font-['Playfair_Display'] italic font-bold text-blue-500 category hidden">video</span>
                                 </div> — 2024
                             </div>
 
@@ -347,7 +394,7 @@
                             </div>
                             <div class="flex gap-4 items-start justify-center mt-4 text-sm">
                                 <div class="flex flex-col"><span class="font-bold">Blog Concept</span><span
-                                        class="font-['Playfair_Display'] italic font-bold text-blue-500">design</span>
+                                        class="font-['Playfair_Display'] italic font-bold text-blue-500 category hidden">website</span>
                                 </div> —
                                 2025
                             </div>
@@ -370,8 +417,7 @@
                             </div>
                             <div class="flex gap-4 items-start justify-center mt-4 text-sm">
                                 <div class="flex flex-col"><span class="font-bold">Amatic</span><span
-                                        class="font-['Playfair_Display'] italic font-bold text-blue-500">commerce
-                                        template</span>
+                                        class="font-['Playfair_Display'] italic font-bold text-blue-500 category hidden">website</span>
                                 </div> — 2020
                             </div>
 
@@ -392,7 +438,7 @@
                             </div>
                             <div class="flex gap-4 items-start justify-center mt-4 text-sm">
                                 <div class="flex flex-col"><span class="font-bold">Healthy</span><span
-                                        class="font-['Playfair_Display'] italic font-bold text-blue-500">concept</span>
+                                        class="font-['Playfair_Display'] italic font-bold text-blue-500 category hidden">website</span>
                                 </div> —
                                 2020
                             </div>
@@ -414,7 +460,7 @@
                             </div>
                             <div class="flex gap-4 items-start justify-center mt-4 text-sm">
                                 <div class="flex flex-col"><span class="font-bold">Unhas</span><span
-                                        class="font-['Playfair_Display'] italic font-bold text-blue-500">website</span>
+                                        class="font-['Playfair_Display'] italic font-bold text-blue-500 category hidden">website</span>
                                 </div> —
                                 2021
                             </div>
@@ -436,7 +482,7 @@
                             </div>
                             <div class="flex gap-4 items-start justify-center mt-4 text-sm">
                                 <div class="flex flex-col"><span class="font-bold">IDwebhosts</span><span
-                                        class="font-['Playfair_Display'] italic font-bold text-blue-500">website</span>
+                                        class="font-['Playfair_Display'] italic font-bold text-blue-500 category hidden">website</span>
                                 </div> —
                                 2020
                             </div>
@@ -458,7 +504,7 @@
                             </div>
                             <div class="flex gap-4 items-start justify-center mt-4 text-sm">
                                 <div class="flex flex-col"><span class="font-bold">Naturevaganza</span><span
-                                        class="font-['Playfair_Display'] italic font-bold text-blue-500">website</span>
+                                        class="font-['Playfair_Display'] italic font-bold text-blue-500 category hidden">website</span>
                                 </div> —
                                 2023
                             </div>
@@ -480,7 +526,7 @@
                             </div>
                             <div class="flex gap-4 items-start justify-center mt-4 text-sm">
                                 <div class="flex flex-col"><span class="font-bold">Order</span><span
-                                        class="font-['Playfair_Display'] italic font-bold text-blue-500">system</span>
+                                        class="font-['Playfair_Display'] italic font-bold text-blue-500 category hidden">website</span>
                                 </div> —
                                 2025
                             </div>
@@ -502,7 +548,7 @@
                             </div>
                             <div class="flex gap-4 items-start justify-center mt-4 text-sm">
                                 <div class="flex flex-col"><span class="font-bold">Arki</span><span
-                                        class="font-['Playfair_Display'] italic font-bold text-blue-500">template</span>
+                                        class="font-['Playfair_Display'] italic font-bold text-blue-500 category hidden">website</span>
                                 </div> —
                                 2019
                             </div>
@@ -524,9 +570,31 @@
                             </div>
                             <div class="flex gap-4 items-start justify-center mt-4 text-sm">
                                 <div class="flex flex-col"><span class="font-bold">Wunik</span><span
-                                        class="font-['Playfair_Display'] italic font-bold text-blue-500">website</span>
+                                        class="font-['Playfair_Display'] italic font-bold text-blue-500 category hidden">website</span>
                                 </div> —
                                 2020
+                            </div>
+
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a class="group flex justify-center items-center flex-col focus:outline-none transition-all "
+                            href="https://www.instagram.com/p/C1skFzWS8ty/" target="_blank">
+                            <img class="min-h-[250px] max-h-[400px] rounded-xl object-bottom object-cover w-full group-hover:opacity-80 shadow-xl"
+                                loading="lazy" width="357" height="305" src="https://cloud.tagbox.com/media/1726964/2138759/414748/18038150065632700/416842761_18404925718009332_4451811575792605411_n.jpg" alt="">
+                            <div
+                                class="icon absolute opacity-0 group-hover:opacity-100 transition-all duration-500 ease-in-out group-hover:rotate-[360deg] scale-0 group-hover:scale-125 left-0 right-0 mx-auto -mt-8 size-16 rounded-full bg-blue-600 flex items-center justify-center">
+                                <svg width="14" height="14" viewBox="0 0 14 14">
+                                    <path
+                                        d="M10.8101 1.96222L0.726954 12.0453L1.66171 12.9801L11.7448 2.89698L11.9344 9.4447L13.208 9.07311L13.0134 2.35278C12.9877 1.46249 12.2434 0.718185 11.3531 0.692412L4.80762 0.502924L4.43487 1.77539L10.8101 1.96222Z"
+                                        fill="white" stroke="white" stroke-width="0.542084"></path>
+                                </svg>
+                            </div>
+                            <div class="flex gap-4 items-start justify-center mt-4 text-sm">
+                                <div class="flex flex-col"><span class="font-bold">Farah</span><span
+                                        class="font-['Playfair_Display'] italic font-bold text-blue-500 category hidden">foto</span>
+                                </div> —
+                                2023
                             </div>
 
                         </a>
@@ -546,7 +614,7 @@
                             </div>
                             <div class="flex gap-4 items-start justify-center mt-4 text-sm">
                                 <div class="flex flex-col"><span class="font-bold">Admin</span><span
-                                        class="font-['Playfair_Display'] italic font-bold text-blue-500">system</span>
+                                        class="font-['Playfair_Display'] italic font-bold text-blue-500 category hidden">website</span>
                                 </div> —
                                 2024
                             </div>
@@ -845,6 +913,46 @@
             if (imageFile) {
                 removeBackground(imageFile);
             }
+        });
+    </script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            const categories = new Set();
+            document.querySelectorAll(".category").forEach((el) => {
+                categories.add(el.textContent.trim().toLowerCase());
+            });
+
+            const filterContainer = document.createElement("div");
+            filterContainer.className = "flex gap-2 mb-4 flex-wrap justify-center";
+
+            const allButton = document.createElement("button");
+            allButton.textContent = "All";
+            allButton.className = "filter-btn text-black px-4 py-2 rounded-full underline decoration-sky-500 decoration-2";
+            allButton.dataset.filter = "all";
+            filterContainer.appendChild(allButton);
+
+            categories.forEach((category) => {
+                const button = document.createElement("button");
+                button.textContent = category.charAt(0).toUpperCase() + category.slice(1);
+                button.className = "filter-btn text-black px-4 py-2 rounded-full";
+                button.dataset.filter = category;
+                filterContainer.appendChild(button);
+            });
+
+            document.querySelector(".swiper-container").insertAdjacentElement("beforebegin", filterContainer);
+
+            document.querySelectorAll(".filter-btn").forEach((btn) => {
+                btn.addEventListener("click", function () {
+                    document.querySelectorAll(".filter-btn").forEach((b) => b.classList.remove("underline", "decoration-sky-500", "decoration-2"));
+                    this.classList.add("underline", "decoration-sky-500", "decoration-2");
+
+                    const filter = this.dataset.filter;
+                    document.querySelectorAll(".swiper-slide").forEach((slide) => {
+                        const category = slide.querySelector(".category").textContent.trim().toLowerCase();
+                        slide.style.display = filter === "all" || category === filter ? "block" : "none";
+                    });
+                });
+            });
         });
     </script>
     <style>
