--- a/index.html
+++ b/index.html
@@ -328,6 +328,50 @@
                     </div>
                     <div class="swiper-slide">
                         <a class="group flex justify-center items-center flex-col focus:outline-none transition-all "
+                            href="https://drive.google.com/file/d/1_ePxLylB3SJu7r9e8jXqjTKI4XW_YyWi/view?usp=sharing" target="_blank">
+                            <img class="min-h-[250px] max-h-[400px] rounded-xl object-bottom object-cover w-full group-hover:opacity-80 shadow-xl"
+                                loading="lazy" width="357" height="305" src="img/jfw.webp" alt="">
+                            <div
+                                class="icon absolute opacity-0 group-hover:opacity-100 transition-all duration-500 ease-in-out group-hover:rotate-[360deg] scale-0 group-hover:scale-125 left-0 right-0 mx-auto -mt-8 size-16 rounded-full bg-blue-600 flex items-center justify-center">
+                                <svg width="14" height="14" viewBox="0 0 14 14">
+                                    <path
+                                        d="M10.8101 1.96222L0.726954 12.0453L1.66171 12.9801L11.7448 2.89698L11.9344 9.4447L13.208 9.07311L13.0134 2.35278C12.9877 1.46249 12.2434 0.718185 11.3531 0.692412L4.80762 0.502924L4.43487 1.77539L10.8101 1.96222Z"
+                                        fill="white" stroke="white" stroke-width="0.542084"></path>
+                                </svg>
+                            </div>
+                            <div class="flex gap-4 items-start justify-center mt-4 text-sm">
+                                <div class="flex flex-col"><span class="font-bold">JFW</span><span
+                                        class="font-['Playfair_Display'] italic font-bold text-blue-500 category hidden">company</span>
+                                </div> —
+                                2024
+                            </div>
+
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a class="group flex justify-center items-center flex-col focus:outline-none transition-all "
+                            href="https://www.youtube.com/watch?v=yVpSbkQcjQU&ab_channel=HermawanSantoso" target="_blank">
+                            <img class="min-h-[250px] max-h-[400px] rounded-xl object-bottom object-cover w-full group-hover:opacity-80 shadow-xl"
+                                loading="lazy" width="357" height="305" src="img/travel.webp" alt="">
+                            <div
+                                class="icon absolute opacity-0 group-hover:opacity-100 transition-all duration-500 ease-in-out group-hover:rotate-[360deg] scale-0 group-hover:scale-125 left-0 right-0 mx-auto -mt-8 size-16 rounded-full bg-blue-600 flex items-center justify-center">
+                                <svg width="14" height="14" viewBox="0 0 14 14">
+                                    <path
+                                        d="M10.8101 1.96222L0.726954 12.0453L1.66171 12.9801L11.7448 2.89698L11.9344 9.4447L13.208 9.07311L13.0134 2.35278C12.9877 1.46249 12.2434 0.718185 11.3531 0.692412L4.80762 0.502924L4.43487 1.77539L10.8101 1.96222Z"
+                                        fill="white" stroke="white" stroke-width="0.542084"></path>
+                                </svg>
+                            </div>
+                            <div class="flex gap-4 items-start justify-center mt-4 text-sm">
+                                <div class="flex flex-col"><span class="font-bold">Travel</span><span
+                                        class="font-['Playfair_Display'] italic font-bold text-blue-500 category hidden">video</span>
+                                </div> —
+                                2024
+                            </div>
+
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a class="group flex justify-center items-center flex-col focus:outline-none transition-all "
                             href="https://www.instagram.com/p/C1laQM-vAdt/" target="_blank">
                             <img class="min-h-[250px] max-h-[400px] rounded-xl object-bottom object-cover w-full group-hover:opacity-80 shadow-xl"
                                 src="https://cloud.tagbox.com/media/1726964/2138759/414748/18061742602491965/415929117_18404393953009332_5833013499614615173_n.jpg"
@@ -1027,43 +1071,64 @@
     </script>
     <script>
         document.addEventListener("DOMContentLoaded", function () {
-            const categories = new Set();
-            document.querySelectorAll(".category").forEach((el) => {
-                categories.add(el.textContent.trim().toLowerCase());
-            });
+    const swiper = new Swiper(".swiper-container", {
+        slidesPerView: "auto",
+        loop: true,
+        spaceBetween: 20,
+        navigation: {
+            nextEl: ".swiper-button-next",
+            prevEl: ".swiper-button-prev",
+        },
+        pagination: {
+            el: ".swiper-pagination",
+            clickable: true,
+        },
+    });
 
-            const filterContainer = document.createElement("div");
-            filterContainer.className = "flex gap-2 mb-4 flex-wrap justify-center";
+    const categories = new Set();
+    const allSlides = Array.from(document.querySelectorAll(".swiper-slide")); // Simpan semua slide asli
 
-            const allButton = document.createElement("button");
-            allButton.textContent = "All";
-            allButton.className = "filter-btn text-black px-4 py-2 rounded-full underline decoration-sky-500 decoration-2";
-            allButton.dataset.filter = "all";
-            filterContainer.appendChild(allButton);
+    document.querySelectorAll(".category").forEach((el) => {
+        categories.add(el.textContent.trim().toLowerCase());
+    });
 
-            categories.forEach((category) => {
-                const button = document.createElement("button");
-                button.textContent = category.charAt(0).toUpperCase() + category.slice(1);
-                button.className = "filter-btn text-black px-4 py-2 rounded-full";
-                button.dataset.filter = category;
-                filterContainer.appendChild(button);
-            });
+    const filterContainer = document.createElement("div");
+    filterContainer.className = "flex gap-2 mb-4 flex-wrap justify-center";
 
-            document.querySelector(".swiper-container").insertAdjacentElement("beforebegin", filterContainer);
+    const allButton = document.createElement("button");
+    allButton.textContent = "All";
+    allButton.className = "filter-btn text-black px-4 py-2 rounded-full underline decoration-sky-500 decoration-2";
+    allButton.dataset.filter = "all";
+    filterContainer.appendChild(allButton);
 
-            document.querySelectorAll(".filter-btn").forEach((btn) => {
-                btn.addEventListener("click", function () {
-                    document.querySelectorAll(".filter-btn").forEach((b) => b.classList.remove("underline", "decoration-sky-500", "decoration-2"));
-                    this.classList.add("underline", "decoration-sky-500", "decoration-2");
+    categories.forEach((category) => {
+        const button = document.createElement("button");
+        button.textContent = category.charAt(0).toUpperCase() + category.slice(1);
+        button.className = "filter-btn text-black px-4 py-2 rounded-full";
+        button.dataset.filter = category;
+        filterContainer.appendChild(button);
+    });
 
-                    const filter = this.dataset.filter;
-                    document.querySelectorAll(".swiper-slide").forEach((slide) => {
-                        const category = slide.querySelector(".category").textContent.trim().toLowerCase();
-                        slide.style.display = filter === "all" || category === filter ? "block" : "none";
-                    });
-                });
-            });
+    document.querySelector(".swiper-container").insertAdjacentElement("beforebegin", filterContainer);
+
+    document.querySelectorAll(".filter-btn").forEach((btn) => {
+        btn.addEventListener("click", function () {
+            document.querySelectorAll(".filter-btn").forEach((b) => b.classList.remove("underline", "decoration-sky-500", "decoration-2"));
+            this.classList.add("underline", "decoration-sky-500", "decoration-2");
+
+            const filter = this.dataset.filter;
+            swiper.removeAllSlides(); // Hapus semua slide dari Swiper
+
+            const filteredSlides = filter === "all"
+                ? allSlides
+                : allSlides.filter(slide => slide.querySelector(".category").textContent.trim().toLowerCase() === filter);
+
+            swiper.appendSlide(filteredSlides); // Tambahkan slide yang sesuai
+            swiper.update(); // Perbarui Swiper agar looping tetap berjalan
         });
+    });
+});
+
     </script>
     <style>
         .bg-grid {
